[gd_scene load_steps=2 format=3 uid="uid://nl3glvjp58fr"]

[ext_resource type="Script" path="res://Scripts/Interface/game_choice.gd" id="1_2tev0"]

[node name="GameChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2tev0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChooseDeckLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Your Deck"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FireButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fire"

[node name="WaterButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Water"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -43.0
offset_right = 115.0
offset_bottom = -14.0
grow_vertical = 0
alignment = 1

[node name="ReturnButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Return to Main Menu"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/FireButton" to="." method="_on_fire_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/WaterButton" to="." method="_on_water_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
